Added large register button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,10 @@ body {
     line-height: 1.4;
 }
 
+.btn-large{
+  font-size: 40px;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
