Added Bob Payne's bio and session

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -613,6 +613,15 @@ a:after {
 	background: #f2f2f2;
 }
 
+.img-sm {
+  height:60px;
+  width:60px;
+}
+
+.img-md {
+  height:120px;
+  width:120px;
+}
 
 /* ==========================================================================
    MEDIA QUERIES
