--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -623,6 +623,14 @@ a:after {
   width:120px;
 }
 
+.col-time {
+  text-align: right;  
+}
+
+.col-all {
+  /*background: grey;*/
+}
+
 #headerwrap .location {
   font-size: 20px;
   color: #ffffff;
