--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,7 +283,7 @@ a:after {
 	background-position: center center;
 	min-height: 650px;
 	width: 100%;
-	
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -397,7 +397,7 @@ a:after {
     background-size: cover;
 
     background-attachment: relative;
-    
+
     text-align: center;
 }
 
@@ -520,7 +520,7 @@ a:after {
 	font-weight: 700;
 	text-align: left;
 	letter-spacing: 2px;
-	
+
 }
 
 .grid figcaption a {
@@ -595,7 +595,7 @@ a:after {
 	background: #2b2b2b;
 	padding-right: 0px;
 	padding-left: 0px;
-	
+
 }
 
 .blog-bg h4 {
@@ -624,7 +624,7 @@ a:after {
 }
 
 .col-time {
-  text-align: right;  
+  text-align: right;
 }
 
 .col-all {
@@ -634,6 +634,11 @@ a:after {
 #headerwrap .location {
   font-size: 20px;
   color: #ffffff;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+#register {
   margin-bottom: 15px;
 }
 
@@ -664,4 +669,3 @@ a:after {
     font-size: 20px;
   }
 }
-
