--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
   <!-- Placed at the end of the document so the pages load faster -->
 
 
-  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-  <!--<script type="text/javascript" src="assets/js/retina.js"></script>-->
-  <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
-  <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
-  <script type="text/javascript" src="assets/js/jquery-func.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  <!--<script type="text/javascript" src="/assets/js/retina.js"></script>-->
+  <script type="text/javascript" src="/assets/js/jquery.easing.1.3.js"></script>
+  <script type="text/javascript" src="/assets/js/smoothscroll.js"></script>
+  <script type="text/javascript" src="/assets/js/jquery-func.js"></script>
