--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,15 +11,24 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#home" class="smoothScroll">Home</a></li>
+            <li><a href="#home" class="smoothScroll">Home</a></li>
             <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
             <li><a href="#sessions" class="smoothScroll"> Sessions</a></li>
             <li><a href="#schedule" class="smoothScroll"> Schedule</a></li>
-        </ul>
+            <li><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> Past Events<span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="/fall-2014"> Fall 2015</a></li>
+                    <li><a href="/2015/04"> Spring 2015</a></li>
+                </ul>
+            </li>
 
+        </ul>
+        {% if page.event.eventbriteid %}
         <ul class="nav navbar-nav navbar-right">
             <li><a href="https://www.eventbrite.com/e/dsmagile-spring-2015-tickets-15682559959" class="btn btn-outline">Register</a></li>
         </ul>
+        {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </div>
