--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
             <li><a href="/" class="smoothScroll">Home</a></li>
             <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
             <li><a href="#sessions" class="smoothScroll"> Sessions</a></li>
-            <li><a href="#schedule" class="smoothScroll"> Schedule</a></li>
+            <!--<li><a href="#schedule" class="smoothScroll"> Schedule</a></li>-->
             <li><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> Past Events<span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
