--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,13 @@
   <div id="footerwrap">
     <div class="container">
-      <h4>Copyright 2015</h4>
+      <div class="left">
+          <h4>Copyright 2015</h4>
+      </div>
+      <div id="footerlogo"></div>
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-
-
   <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-  <!--<script type="text/javascript" src="/assets/js/retina.js"></script>-->
   <script type="text/javascript" src="/assets/js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="/assets/js/smoothscroll.js"></script>
   <script type="text/javascript" src="/assets/js/jquery-func.js"></script>
