--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,13 @@
+<div class="github-fork-ribbon-wrapper left">
+    <div class="github-fork-ribbon">
+        <a href="#">Sold Out!</a>
+    </div>
+</div>
+<!--<div class="github-fork-ribbon-wrapper right">-->
+    <!--<div class="github-fork-ribbon">-->
+        <!--<a href="#">Sold Out!</a> -->
+    <!--</div>-->
+<!--</div>-->
 <div id="navbar-main">
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top">
