sold out banner for all events

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,12 @@
+<!--Soldout Banner-->
+{% if page.show-soldout == true %}
 <div class="github-fork-ribbon-wrapper left">
     <div class="github-fork-ribbon">
         <a href="#">Sold Out!</a>
     </div>
 </div>
-<!--<div class="github-fork-ribbon-wrapper right">-->
-    <!--<div class="github-fork-ribbon">-->
-        <!--<a href="#">Sold Out!</a> -->
-    <!--</div>-->
-<!--</div>-->
+{% endif %}
+
 <div id="navbar-main">
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top">
