--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon icon-menu" style="font-size:30px; color:#3498db;"></span>
         </button>
-        <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-menu" style="font-size:18px; color:#3498db;"></span></a>
+        <a class="navbar-brand hidden-xs hidden-sm hidden-md hidden-lg" href="#home"><span class="icon icon-menu" style="font-size:18px; color:#3498db;"></span></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
