--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,9 +21,15 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li><a href="/" class="smoothScroll">Home</a></li>
+	    {% if page.show-speakers == true %}
             <li><a href="#speakers" class="smoothScroll"> Speakers</a></li>
+	    {% endif %}
+	    {% if page.show-sessions == true %}
             <li><a href="#sessions" class="smoothScroll"> Sessions</a></li>
+	    {% endif %}
+	    {% if page.show-schedule == true %}	    
             <li><a href="#schedule" class="smoothScroll"> Schedule</a></li>
+	    {% endif %}	    
             <li><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"> Past Events<span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
