add waitlist when soldout, updated schedule
Added logic in schedule to reference the sessions. In included speaker
photos in the schedule.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,7 +42,12 @@
         </ul>
         {% if page.event.eventbriteid %}
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://www.eventbrite.com/e/{{page.event.eventbriteid}}" class="btn btn-outline">Register</a></li>
+            <li><a href="https://www.eventbrite.com/e/{{page.event.eventbriteid}}" class="btn btn-outline">
+         {% if page.show-soldout == true %}
+            Waitlist
+         {% else %}
+            Register
+         {% endif %}</a></li>
         </ul>
         {% endif %}
         </div><!--/.nav-collapse -->
