Adding OpenGraph links to help with preview displays in social media.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
-<link rel="shortcut icon" href="/assets/ico/favicon.png">
+<meta property="og:image" content="http://www.agileiowa.org/images/agileiowa.png">
+<meta property="og:description" content="dsmAgile: The best investment you can make in yourself">
+<meta property="og:url" content="http://dsmagile.agileiowa.org">
+<meta property="og:title" content="dsmAgile Conference">
+<link rel="shortcut icon" href="http://www.agileiowa.org/images/agileiowa.png">
 
 <title>Des Moines Agile</title>
 
