--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,9 @@ body {
   font-size: 40px;
 }
 
+table th{
+    text-align: center;
+}
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
