--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,6 +141,9 @@ border: 0px solid transparent;
 	color: white;
 }
 
+.navbar-nav.navbar-right:last-child {
+    margin-right: 4px;
+  }
 
 
 hr {
