--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -690,6 +690,10 @@ a:after {
   margin-bottom: 15px;
 }
 
+#sessions li {
+    text-align: left;
+}
+
 /* ==========================================================================
    MEDIA QUERIES
    ========================================================================== */
